--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook builds a standalone visualisation of a set of images you upload in a zip file. It is inspired by the Image Machine [1]\n",
+    "This notebook builds a standalone visualisation of a set of images you upload in a zip file. It is inspired by the [Image Machine](https://doi.org/10.31235/osf.io/2cwsu).\n",
     "\n",
     "It will apply off-the-shelf algorithms for representing your images as a compact set of a numbers [(an embedding of the images in a vector space)](https://en.wikipedia.org/wiki/Embedding). The resulting representation of the images is used to organise and visualise the relationships between the images you upload, *with respect to* the specific embedding algorithm chosen.  \n",
     "\n",
@@ -19,9 +19,9 @@
     "\n",
     "This notebook supports generating the following embeddings for your uploaded images:\n",
     "\n",
-    "- Colour Histogram: A size-normalised RGB pixel colour count array [2].\n",
-    "- VGG (16 and 19): A convolutional neural network that returns probabilities for images being in each of the 1000 categories [3].\n",
-    "- CLIP: OpenAi's model trainied on image-text pairs [4].\n",
+    "- Colour Histogram: A size-normalised RGB pixel colour count array ([documentation](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.histogram)).\n",
+    "- VGG (16 and 19): A convolutional neural network that returns probabilities for images being in each of the 1000 categories ([documentation](https://pytorch.org/vision/main/models/vgg.html)).\n",
+    "- CLIP: OpenAi's model trainied on image-text pairs ([documentation](https://github.com/minimaxir/imgbeddings)) ([paper](https://arxiv.org/pdf/2103.00020)).\n",
     "\n",
     "## What You'll Need\n",
     "\n",
@@ -39,11 +39,10 @@
     "\n",
     "### Don't Have a Dataset Yet?\n",
     "\n",
-    "Try out these example datasets:\n",
+    "Try out these example datasets (look inside the `/example_datasets` folder):\n",
     "\n",
-    "- wildlife/landscape image dataset (labelled `jasperchong_image_dataset.zip` within directory).\n",
-    "- ***add links from zenodo + brief description***\n",
-    "- [ultrasounds images](http://cimalab.unal.edu.co/?lang=en&mod=program&id=5).\n"
+    "- **wildlife/landscape image dataset (labelled `jasperchong_image_dataset.zip` within directory).**\n",
+    "- [ultrasounds images landing page](http://cimalab.unal.edu.co/?lang=en&mod=program&id=5) with [version 2 zip file](http://cimalab.unal.edu.co/applications/thyroid/DDTI_V2.zip) .\n"
    ]
   },
   {
@@ -53,9 +52,7 @@
     "If you are familiar with jupyter notebooks please start running the notebook from [section 0](#zero), otherwise the following aims to give you a quickstart guide.\n",
     "\n",
     "1. Jupter notebooks are made up of 'cells,' these are either 'code' (python in this case ), or 'text' (markdown) cells.\n",
-    "2. To run a cell you can either click on the run symbol in a cell, or use `shift`+`enter`.\n",
-    "\n",
-    "**add link to tutorial here from sam**"
+    "2. To run a cell you can either click on the run symbol in a cell, or use `shift`+`enter`."
    ]
   },
   {
@@ -605,7 +602,7 @@
    "metadata": {},
    "source": [
     "### 4.2 Get KNN\n",
-    "In this section we generate the `nearest_neighbours_array` and `neighbours_distance_array` for the desired `number_of_neighbours` using the pynndescent library [5]. \n",
+    "In this section we generate the `nearest_neighbours_array` and `neighbours_distance_array` for the desired `number_of_neighbours` using the [pynndescent library](https://github.com/lmcinnes/pynndescent) ([paper](https://dl.acm.org/doi/pdf/10.1145/3227609.3227643)). \n",
     "The `nearest_neighbours_array` is a 2D array where the ith row represents the ith filename in `image_filenames`, and each row lists the desired N nearest neighbours for that specific image.\n",
     "The `neighbours_distance_array` is similar to the `nearest_neighbours_array`, however lists the neigbour distance.\n",
     "\n",
